2010-07-13  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/base/http.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/test/test_http.py:
	Revert r8058, which was reverting r7950. This effectively brings back
	the allow-default property of streaming components.

2010-07-12  David Gay i Tello  <dgay@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* flumotion/manager/admin.py:
	Add remote call to list a component and its upstream components along with
	types and worker hosts.

2010-07-12  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Marc-Andre Lureau
	patch by: Andoni Morales

	* flumotion/common/eventcalendar.py:
	* flumotion/test/test_common_eventcalendar.py:
	* flumotion/test/test_icalbouncer.py:
	Add ical VTIMEZONE definition parsing. Closes #1377

2010-07-12  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/admin/assistant/models.py:
	Add prefix and requiresPorter properties to the wizard Consumer
	models.
	* flumotion/admin/assistant/save.py:
	Use the Consumer prefix property instead of getting it from the
	consumerType.
	* flumotion/component/consumers/disker/wizard_gtk.py:
	* flumotion/component/consumers/httpstreamer/wizard_gtk.py:
	* flumotion/component/consumers/shout2/wizard_gtk.py:
	* flumotion/scenario/live/wizard_gtk.py:
	Use the Consumer requiresPorter property instead of getting it from
	the consumerType.

2010-07-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/extern/log/log.py:
	Add comments about keeping the logging module generic.

2010-07-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/extern/log/log.py:
	Remove mentions of Flumotion from log.py, it should be left as a
	generic module.

2010-07-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
